[package]
name = "sym-cts-rs"
version = "0.1.0"
authors = ["Eric Hsu <xuzhenyutc@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cts-plugin = {git = "https://github.com/erihsu/cts-plugin",rev="2d16200"}
libloading = "0.5"
rand = "*"